--- a/BCMR_output.Rmd
+++ b/BCMR_output.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Beaver Creek Mark-Recapture Output"
 author: "Matt Tyers"
-date: "2024-09-09"
+date: "2024-09-18"
 output: word_document
 ---
 
@@ -11,23 +11,24 @@ knitr::opts_chunk$set(echo = FALSE, fig.width = 10, fig.height = 7, dpi=300,
 ```
 
 ```{r fig.show='hide'}
-source("R/1_BCMR_data.R")
+# source("R/1_BCMR_data.R")
+source("R/3_BCMR_estimates.R")
 
-# # doing this with the object that will be used to tally!
-# bc_cap2_recaps$sample[bc_cap2_recaps$Tag == 515] <- "float"
+# # # doing this with the object that will be used to tally!
+# # bc_cap2_recaps$sample[bc_cap2_recaps$Tag == 515] <- "float"
+# # 
+# # 
+# # n1 <- table(bc_cap1$sample)    # this should work
+# # n2 <- table(bc_cap2$sample)    # this should work
+# # # m2 <- table(recaps$sample1)    # wrong, there are Recap $Tag's in bc_cap2
+# # m2 <- table(bc_cap2_recaps$sample)  # this will work now
+# n1_Stratum1 <- table(bc_cap1$Stratum1)    # this should work
+# n2_Stratum1 <- table(bc_cap2$Stratum1)    # this should work
+# m2_Stratum1 <- table(bc_cap2_recaps$Stratum1)  # this will work now
 # 
-# 
-# n1 <- table(bc_cap1$sample)    # this should work
-# n2 <- table(bc_cap2$sample)    # this should work
-# # m2 <- table(recaps$sample1)    # wrong, there are Recap $Tag's in bc_cap2
-# m2 <- table(bc_cap2_recaps$sample)  # this will work now
-n1_Stratum1 <- table(bc_cap1$Stratum1)    # this should work
-n2_Stratum1 <- table(bc_cap2$Stratum1)    # this should work
-m2_Stratum1 <- table(bc_cap2_recaps$Stratum1)  # this will work now
-
-n1_Stratum2 <- table(bc_cap1$Stratum2)    # this should work
-n2_Stratum2 <- table(bc_cap2$Stratum2)    # this should work
-m2_Stratum2 <- table(bc_cap2_recaps$Stratum2)  # this will work now
+# n1_Stratum2 <- table(bc_cap1$Stratum2)    # this should work
+# n2_Stratum2 <- table(bc_cap2$Stratum2)    # this should work
+# m2_Stratum2 <- table(bc_cap2_recaps$Stratum2)  # this will work now
 
 
 ## defining a function to illustrate differences in distribution, with ks test
@@ -262,54 +263,55 @@ It should be noted that during the recapture event, one fish got away before its
 ```{r}
 ######### ----------------- abundance estimates ----------------- #########
 
-library(recapr)
-
-nhat_Stratum1 <- NBailey(n1=n1_Stratum1, n2=n2_Stratum1, m2=m2_Stratum1) %>% 
-  unname %>% round %>% formatC(format="d", big.mark=",")  # estimated abundance
-
-se_nhat_Stratum1 <- seBailey(n1=n1_Stratum1, n2=n2_Stratum1, m2=m2_Stratum1) %>% 
-  unname %>% round  %>% formatC(format="d", big.mark=",") # SE of estimated abundance
-
-
-nhat_combined_Stratum1 <- Nstrat(n1=n1_Stratum1, n2=n2_Stratum1, m2=m2_Stratum1, 
-                                 estimator = "Bailey") %>% 
-  unname %>% round %>% formatC(format="d", big.mark=",")   # estimated abundance
-se_nhat_combined_Stratum1 <- sestrat(n1=n1_Stratum1, n2=n2_Stratum1, m2=m2_Stratum1, 
-                                     estimator = "Bailey") %>% 
-  unname %>% round %>% formatC(format="d", big.mark=",")  # SE of estimated abundance
-
-
-nhat_Stratum2 <- NBailey(n1=n1_Stratum2, n2=n2_Stratum2, m2=m2_Stratum2)[c(2,3,1,4)] %>% 
-  # unname %>% 
-  round %>% formatC(format="d", big.mark=",")  # estimated abundance
-
-se_nhat_Stratum2 <- seBailey(n1=n1_Stratum2, n2=n2_Stratum2, m2=m2_Stratum2)[c(2,3,1,4)] %>% 
-  # unname %>% 
-  round  %>% formatC(format="d", big.mark=",") # SE of estimated abundance
-
-
-nhat_combined_Stratum2 <- Nstrat(n1=n1_Stratum2, n2=n2_Stratum2, m2=m2_Stratum2, 
-                                 estimator = "Bailey") %>% 
-  unname %>% round %>% formatC(format="d", big.mark=",")   # estimated abundance
-se_nhat_combined_Stratum2 <- sestrat(n1=n1_Stratum2, n2=n2_Stratum2, m2=m2_Stratum2, 
-                                     estimator = "Bailey") %>% 
-  unname %>% round %>% formatC(format="d", big.mark=",")  # SE of estimated abundance
+# library(recapr)
+# 
+# nhat_Stratum1 <- NBailey(n1=n1_Stratum1, n2=n2_Stratum1, m2=m2_Stratum1) %>% 
+#   unname %>% round %>% formatC(format="d", big.mark=",")  # estimated abundance
+# 
+# se_nhat_Stratum1 <- seBailey(n1=n1_Stratum1, n2=n2_Stratum1, m2=m2_Stratum1) %>% 
+#   unname %>% round  %>% formatC(format="d", big.mark=",") # SE of estimated abundance
+# 
+# 
+# nhat_combined_Stratum1 <- Nstrat(n1=n1_Stratum1, n2=n2_Stratum1, m2=m2_Stratum1, 
+#                                  estimator = "Bailey") %>% 
+#   unname %>% round %>% formatC(format="d", big.mark=",")   # estimated abundance
+# se_nhat_combined_Stratum1 <- sestrat(n1=n1_Stratum1, n2=n2_Stratum1, m2=m2_Stratum1, 
+#                                      estimator = "Bailey") %>% 
+#   unname %>% round %>% formatC(format="d", big.mark=",")  # SE of estimated abundance
+# 
+# 
+# nhat_Stratum2 <- NBailey(n1=n1_Stratum2, n2=n2_Stratum2, m2=m2_Stratum2)[c(2,3,1,4)] %>% 
+#   # unname %>% 
+#   round %>% formatC(format="d", big.mark=",")  # estimated abundance
+# 
+# se_nhat_Stratum2 <- seBailey(n1=n1_Stratum2, n2=n2_Stratum2, m2=m2_Stratum2)[c(2,3,1,4)] %>% 
+#   # unname %>% 
+#   round  %>% formatC(format="d", big.mark=",") # SE of estimated abundance
+# 
+# 
+# nhat_combined_Stratum2 <- Nstrat(n1=n1_Stratum2, n2=n2_Stratum2, m2=m2_Stratum2, 
+#                                  estimator = "Bailey") %>% 
+#   unname %>% round %>% formatC(format="d", big.mark=",")   # estimated abundance
+# se_nhat_combined_Stratum2 <- sestrat(n1=n1_Stratum2, n2=n2_Stratum2, m2=m2_Stratum2, 
+#                                      estimator = "Bailey") %>% 
+#   unname %>% round %>% formatC(format="d", big.mark=",")  # SE of estimated abundance
 ```
 
 ### Results - Beaver & Nome Creeks 
 
-The abundance was estimated as `r nhat_Stratum1[1]` and `r nhat_Stratum1[2]` for Beaver Creek and Nome Creek, respectively (SE `r se_nhat_Stratum1[1]` and `r se_nhat_Stratum1[2]`, respectively), and `r nhat_combined_Stratum1` (SE `r se_nhat_combined_Stratum1`) for the full study area.
+The abundance was estimated as `r unname(nhat_Stratum1["Beaver"])` and `r unname(nhat_Stratum1["Nome"])` for Beaver Creek and Nome Creek, respectively (SE `r unname(se_nhat_Stratum1["Beaver"])` and `r unname(se_nhat_Stratum1["Nome"])`, respectively), and `r nhat_combined_Stratum1` (SE `r se_nhat_combined_Stratum1`) for the full study area.
 
 ### Results - Finer stratification
 
 If the movement among strata is accepted and assumed negligible, the finer stratification of Nome Creek yields the following abundance estimates.  Of particular interest is the middle Nome Creek stratum, chosen to be a reach equivalent to the 2000 study:
 
 ```{r}
-cbind(n1=formatC(unname(n1_Stratum2[c(2,3,1,4)]), format="d", big.mark=","),
-           n2=formatC(unname(n2_Stratum2[c(2,3,1,4)]), format="d", big.mark=","),
-           m2=unname(m2_Stratum2[c(2,3,1,4)]), 
-           Nhat = nhat_Stratum2, 
-           SE_Nhat = se_nhat_Stratum2) %>% knitr::kable()
+thenames <- c("Beaver", "Lower Nome", "2000 Study", "Upper Nome")
+cbind(n1=formatC(unname(n1_Stratum2[thenames]), format="d", big.mark=","),
+           n2=formatC(unname(n2_Stratum2[thenames]), format="d", big.mark=","),
+           m2=unname(m2_Stratum2[thenames]), 
+           Nhat = nhat_Stratum2[thenames], 
+           SE_Nhat = se_nhat_Stratum2[thenames]) %>% knitr::kable()
 ```
 
 ## Length Distribution
@@ -317,10 +319,10 @@ cbind(n1=formatC(unname(n1_Stratum2[c(2,3,1,4)]), format="d", big.mark=","),
 ```{r, results='asis'}
 ######### ----------------- ASL estimates (length bins) ----------------- #########
 
-lengthbreaks <- c(250, 270, 300, 350, 400, 450) # c(250, 270, 300, 400)
-
-bc_all_justonce <- rbind(bc_cap1,
-                         subset(bc_cap2, Tag=="-"))
+# lengthbreaks <- c(250, 270, 300, 350, 400, 450) # c(250, 270, 300, 400)
+# 
+# bc_all_justonce <- rbind(bc_cap1,
+#                          subset(bc_cap2, Tag=="-"))
 
 lengthbreakcount <- ifelse(length(lengthbreaks)-1 <= 9, 
                            c("one", "two", "three", "four", "five", "six", "seven", "eight", "nine")[length(lengthbreaks)-1],
@@ -358,12 +360,13 @@ The length composition was tabulated and stratified estimators were calculated a
 ```{r, results='asis'}
 digitvec <- c(0,3,3,0,0)
 
-ASL_table(stratum = as.numeric(as.factor(bc_all$Stratum1)),
-          # length = bc_all$Length,
-          age = cut(bc_all$Length, lengthbreaks, right=FALSE),
-          Nhat = as.numeric(NBailey(n1=n1_Stratum1, n2=n2_Stratum1, m2=m2_Stratum1)),
-          se_Nhat = as.numeric(seBailey(n1=n1_Stratum1, n2=n2_Stratum1, m2=m2_Stratum1))) %>%
-  knitr::kable(digits=digitvec)
+# ASL_table(stratum = as.numeric(as.factor(bc_all$Stratum1)),
+#           # length = bc_all$Length,
+#           age = cut(bc_all$Length, lengthbreaks, right=FALSE),
+#           Nhat = as.numeric(NBailey(n1=n1_Stratum1, n2=n2_Stratum1, m2=m2_Stratum1)),
+#           se_Nhat = as.numeric(seBailey(n1=n1_Stratum1, n2=n2_Stratum1, m2=m2_Stratum1))) %>%
+#   knitr::kable(digits=digitvec)
+ASL_pooled %>% knitr::kable(digits=digitvec)
 ```
 
 ### Mark event only
@@ -371,12 +374,13 @@ ASL_table(stratum = as.numeric(as.factor(bc_all$Stratum1)),
 ```{r, results='asis'}
 
 # just using first event sample
-ASL_table(stratum = as.numeric(as.factor(bc_cap1$Stratum1)),
-          # length = bc_cap1$Length,
-          age = cut(bc_cap1$Length, lengthbreaks, right=FALSE),
-          Nhat = as.numeric(NBailey(n1=n1_Stratum1, n2=n2_Stratum1, m2=m2_Stratum1)),
-          se_Nhat = as.numeric(seBailey(n1=n1_Stratum1, n2=n2_Stratum1, m2=m2_Stratum1))) %>%
-  knitr::kable(digits=digitvec)
+# ASL_table(stratum = as.numeric(as.factor(bc_cap1$Stratum1)),
+#           # length = bc_cap1$Length,
+#           age = cut(bc_cap1$Length, lengthbreaks, right=FALSE),
+#           Nhat = as.numeric(NBailey(n1=n1_Stratum1, n2=n2_Stratum1, m2=m2_Stratum1)),
+#           se_Nhat = as.numeric(seBailey(n1=n1_Stratum1, n2=n2_Stratum1, m2=m2_Stratum1))) %>%
+#   knitr::kable(digits=digitvec)
+ASL_firstevent %>% knitr::kable(digits=digitvec)
 ```
 
 ### Recapture event only
@@ -384,12 +388,13 @@ ASL_table(stratum = as.numeric(as.factor(bc_cap1$Stratum1)),
 ```{r, results='asis'}
 
 # just using second event sample
-ASL_table(stratum = as.numeric(as.factor(bc_cap2$Stratum1)),
-          # length = bc_cap2$Length,
-          age = cut(bc_cap2$Length, lengthbreaks, right=FALSE),
-          Nhat = as.numeric(NBailey(n1=n1_Stratum1, n2=n2_Stratum1, m2=m2_Stratum1)),
-          se_Nhat = as.numeric(seBailey(n1=n1_Stratum1, n2=n2_Stratum1, m2=m2_Stratum1))) %>%
-  knitr::kable(digits=digitvec)
+# ASL_table(stratum = as.numeric(as.factor(bc_cap2$Stratum1)),
+#           # length = bc_cap2$Length,
+#           age = cut(bc_cap2$Length, lengthbreaks, right=FALSE),
+#           Nhat = as.numeric(NBailey(n1=n1_Stratum1, n2=n2_Stratum1, m2=m2_Stratum1)),
+#           se_Nhat = as.numeric(seBailey(n1=n1_Stratum1, n2=n2_Stratum1, m2=m2_Stratum1))) %>%
+#   knitr::kable(digits=digitvec)
+ASL_secondevent %>% knitr::kable(digits=digitvec)
 ```
 
 ### Beaver Creek only
@@ -397,26 +402,42 @@ ASL_table(stratum = as.numeric(as.factor(bc_cap2$Stratum1)),
 ```{r, results='asis'}
 
 # pooling both events, but separating by capture stratum
-with(subset(bc_all, Stratum1 == "Beaver"),
-     ASL_table(
-       # length = Length,
-       age = cut(Length, lengthbreaks, right=FALSE),
-       Nhat = as.numeric(NBailey(n1=n1_Stratum1, n2=n2_Stratum1, m2=m2_Stratum1))[1],
-       se_Nhat = as.numeric(seBailey(n1=n1_Stratum1, n2=n2_Stratum1, m2=m2_Stratum1))[1])) %>%
-  knitr::kable(digits=digitvec)
+# with(subset(bc_all, Stratum1 == "Beaver"),
+#      ASL_table(
+#        # length = Length,
+#        age = cut(Length, lengthbreaks, right=FALSE),
+#        Nhat = as.numeric(NBailey(n1=n1_Stratum1, n2=n2_Stratum1, m2=m2_Stratum1))[1],
+#        se_Nhat = as.numeric(seBailey(n1=n1_Stratum1, n2=n2_Stratum1, m2=m2_Stratum1))[1])) %>%
+#   knitr::kable(digits=digitvec)
+ASL_Beaver %>% knitr::kable(digits=digitvec)
 ```
 
 ### Nome Creek only
 
 ```{r, results='asis'}
 
-with(subset(bc_all, Stratum1 == "Nome"),
-     ASL_table(
-       # length = Length,
-       age = cut(Length, lengthbreaks, right=FALSE),
-       Nhat = as.numeric(NBailey(n1=n1_Stratum1, n2=n2_Stratum1, m2=m2_Stratum1))[2],
-       se_Nhat = as.numeric(seBailey(n1=n1_Stratum1, n2=n2_Stratum1, m2=m2_Stratum1))[2])) %>%
-  knitr::kable(digits=digitvec)
+# with(subset(bc_all, Stratum1 == "Nome"),
+#      ASL_table(
+#        # length = Length,
+#        age = cut(Length, lengthbreaks, right=FALSE),
+#        Nhat = as.numeric(NBailey(n1=n1_Stratum1, n2=n2_Stratum1, m2=m2_Stratum1))[2],
+#        se_Nhat = as.numeric(seBailey(n1=n1_Stratum1, n2=n2_Stratum1, m2=m2_Stratum1))[2])) %>%
+#   knitr::kable(digits=digitvec)
+ASL_Nome %>% knitr::kable(digits=digitvec)
+```
+
+### 2000 Study Area only
+
+```{r, results='asis'}
+
+# with(subset(bc_all, Stratum2 == "2000 Study"),
+#      ASL_table(
+#        # length = Length,
+#        age = cut(Length, lengthbreaks, right=FALSE),
+#        Nhat = as.numeric(NBailey(n1=n1_Stratum2, n2=n2_Stratum2, m2=m2_Stratum2))[1],
+#        se_Nhat = as.numeric(seBailey(n1=n1_Stratum2, n2=n2_Stratum2, m2=m2_Stratum2))[1])) %>%
+#   knitr::kable(digits=digitvec)
+ASL_2000 %>% knitr::kable(digits=digitvec)
 ```
 
 ```{r, results='asis'}
